# ito-pkg

./: Cargo.toml  README.md
src/: cli.rs  main.rs  models.rs
src/commands/: mod.rs  new.rs  pack.rs  repo.rs  serve.rs  verify.rs
templates/anime/: lib.rs.j2
templates/common/: Cargo.toml.j2  manifest.json.j2
templates/manga/: lib.rs.j2
templates/novel/: lib.rs.j2
