[package]
name = "ito-pkg"
version = "0.1.3"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
zip = "8.6.0"
sha2 = "0.11.0"
hex = "0.4.3"
rouille = "3.6.2"
anyhow = "1.0.103"
rust-embed = "8.11.0"
minijinja = "2.21.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
chrono = "0.4.45"

[lints.rust]
unsafe_code = "warn"
[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
